--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
 		"@enact/ui": "^4.8.0",
 		"@reduxjs/toolkit": "^2.3.0",
 		"axios": "^1.7.7",
+		"hls.js": "^1.5.17",
 		"html-entities": "^2.5.2",
 		"ilib": "^14.19.0",
 		"prop-types": "^15.8.1",
