--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,13 +37,12 @@
 		"@enact/ui": "^4.8.0",
 		"@reduxjs/toolkit": "^2.3.0",
 		"axios": "^1.7.7",
-		"html-entities": "^2.5.2",
 		"ilib": "^14.19.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.1.2",
-		"styled-component": "^2.8.0",
+		"recharts": "^2.13.3",
 		"web-vitals": "^3.5.1"
 	},
 	"devDependencies": {
