--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,11 +37,9 @@
 		"@enact/ui": "^4.8.0",
 		"@reduxjs/toolkit": "^2.3.0",
 		"axios": "^1.7.7",
-<<<<<<< HEAD
-=======
+		"hls": "^0.0.1",
 		"hls.js": "^1.5.17",
 		"html-entities": "^2.5.2",
->>>>>>> 4fd9dc30eaa576693770728f2273f1c1d561958a
 		"ilib": "^14.19.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
