--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.1.2",
+		"react-scripts": "^5.0.1",
 		"recharts": "^2.13.3",
 		"web-vitals": "^3.5.1"
 	},
